--- a/admin/index.html
+++ b/admin/index.html
@@ -194,7 +194,7 @@
         const GAS_APP_URL = 'https://script.google.com/macros/s/AKfycbyQBWZZRrIGT6HIy78uvYqNqqo2CDISHIqOPMPTEG1mCvH4gxEn9QJXqlYaHVAV0zBu/exec';
 
         // Ссылка на главную страницу для парсера (если разделы не найдены в памяти)
-        const MAIN_PAGE_URL = '/'; 
+        const MAIN_PAGE_URL = 'https://wedophoto.github.io/lego/'; 
 
         // --- ГЛОБАЛЬНОЕ СОСТОЯНИЕ ---
         let state = {
